# avatar

./: CMakeLists.txt  README.md
apps/facial_motion_capture/: CMakeLists.txt
apps/head_pose_estimation/: CMakeLists.txt
client/: CMakeLists.txt
libs/GFrame/: CMakeLists.txt
libs/GFrame/base/: glsupport.h
libs/GFrame/core/: Scene.cpp  Scene.hpp
libs/GFrame/geometries/: Geometry.hpp
libs/GFrame/glObjects/: FrameBufferObject.hpp
libs/GFrame/materials/: Cubemap.cpp  Cubemap.hpp  Material.hpp  Texture.hpp
libs/GFrame/programs/: ColorShader.h  Shader.h
maya/face_landmark_detection/: CMakeLists.txt
server/: CMakeLists.txt
server/include/: BlockingQueue.h  SocketServer.h
server/src/: FaceViewer.cpp
